Hente og lagre adressehistorikk for alle personer på saken, bruke i omsorg-vilkår i rammevedtak