@@ -56,8 +56,8 @@ import no.nav.k9.sak.domene.medlem.MedlemTjeneste;
 import no.nav.k9.sak.domene.medlem.api.Medlemskapsperiode;
 import no.nav.k9.sak.domene.person.pdl.PersoninfoAdapter;
 import no.nav.k9.sak.domene.registerinnhenting.impl.SaksopplysningerFeil;
-import no.nav.k9.sak.domene.registerinnhenting.personopplysninger.AlleRelasjonFilter;
 import no.nav.k9.sak.domene.registerinnhenting.personopplysninger.IngenRelasjonFilter;
+import no.nav.k9.sak.domene.registerinnhenting.personopplysninger.OmsorgspengerRammevedtakRelasjonFilter;
 import no.nav.k9.sak.domene.registerinnhenting.personopplysninger.OmsorgspengerRelasjonsFilter;
 import no.nav.k9.sak.domene.registerinnhenting.personopplysninger.PleietrengendeRelasjonsFilter;
 import no.nav.k9.sak.domene.registerinnhenting.personopplysninger.YtelsesspesifikkRelasjonsFilter;
@@ -70,10 +70,10 @@ public class RegisterdataInnhenter {
 
     private static final Logger log = LoggerFactory.getLogger(RegisterdataInnhenter.class);
 
-    private final Map<FagsakYtelseType, YtelsesspesifikkRelasjonsFilter> barnRelasjonsFilter = Map.of(
-        FagsakYtelseType.OMSORGSPENGER_KS, new AlleRelasjonFilter(),
-        FagsakYtelseType.OMSORGSPENGER_MA, new AlleRelasjonFilter(),
-        FagsakYtelseType.OMSORGSPENGER_AO, new AlleRelasjonFilter(),
+    private final Map<FagsakYtelseType, YtelsesspesifikkRelasjonsFilter> relasjonsFilter = Map.of(
+        FagsakYtelseType.OMSORGSPENGER_KS, new OmsorgspengerRammevedtakRelasjonFilter(),
+        FagsakYtelseType.OMSORGSPENGER_MA, new OmsorgspengerRammevedtakRelasjonFilter(),
+        FagsakYtelseType.OMSORGSPENGER_AO, new OmsorgspengerRammevedtakRelasjonFilter(),
         FagsakYtelseType.PSB, new PleietrengendeRelasjonsFilter(),
         FagsakYtelseType.OMP, new OmsorgspengerRelasjonsFilter());
 
@@ -87,7 +87,6 @@ public class RegisterdataInnhenter {
     private BehandlingLåsRepository behandlingLåsRepository;
     private Instance<InformasjonselementerUtleder> informasjonselementer;
     private boolean lagreDeltBostedForRammevedtakOMP;
-    private boolean alltidHenteHistorikk;
 
     RegisterdataInnhenter() {
         // for CDI proxy
@@ -112,7 +111,6 @@ public class RegisterdataInnhenter {
         this.abakusTjeneste = abakusTjeneste;
         this.informasjonselementer = utledInformasjonselementer;
         this.lagreDeltBostedForRammevedtakOMP = lagreDeltBostedForRammevedtakOMP;
-        this.alltidHenteHistorikk = lagreDeltBostedForRammevedtakOMP;
     }
 
     public Personinfo innhentSaksopplysningerForSøker(AktørId søkerAktørId) {
@@ -130,9 +128,7 @@ public class RegisterdataInnhenter {
         }
 
         // Innhent øvrige data fra TPS
-        var personInformasjonBuilder = alltidHenteHistorikk
-            ? byggPersonopplysningMedRelasjonerOgKomplettHistorikk(søkerInfo, behandling)
-            : byggPersonopplysningMedRelasjoner(søkerInfo, behandling);
+        var personInformasjonBuilder = byggPersonopplysningMedRelasjoner(søkerInfo, behandling);
 
         // lagre alt
         behandlingLåsRepository.taLås(behandling.getId());
@@ -149,59 +145,23 @@ public class RegisterdataInnhenter {
         medlemskapRepository.lagreMedlemskapRegisterOpplysninger(behandlingId, medlemskapsperioder);
     }
 
-    private PersonInformasjonBuilder byggPersonopplysningMedRelasjonerOgKomplettHistorikk(Personinfo søkerPersonInfo,
-                                                                                          Behandling behandling) {
+    private PersonInformasjonBuilder byggPersonopplysningMedRelasjoner(Personinfo søkerPersonInfo, Behandling behandling) {
 
         var informasjonBuilder = new PersonInformasjonBuilder(PersonopplysningVersjonType.REGISTRERT);
 
-        // Historikk for søker
         var fagsakYtelseType = behandling.getFagsakYtelseType();
         var opplysningsperioden = skjæringstidspunktTjeneste.utledOpplysningsperiode(behandling.getId(), fagsakYtelseType, true);
 
         Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(søkerPersonInfo.getAktørId(), opplysningsperioden);
         mapInfoMedHistorikkTilEntitet(søkerPersonInfo, personhistorikkinfo, informasjonBuilder);
 
-
-        if (fagsakYtelseType.harRelatertePersoner()) {
-            // legg til pleietrengende
-            leggTilPleietrengendeMedHistorikk(informasjonBuilder, behandling, opplysningsperioden);
-            // Ektefelle
-            leggTilEktefelleMedHistorikk(søkerPersonInfo, informasjonBuilder, opplysningsperioden);
-            // Relatert person
-            leggTilRelatertPersonMedHistorikk(informasjonBuilder, behandling, opplysningsperioden);
-
-        }
-
         leggTilSøkersBarn(søkerPersonInfo, behandling, informasjonBuilder, opplysningsperioden);
 
-        return informasjonBuilder;
-    }
-
-    private PersonInformasjonBuilder byggPersonopplysningMedRelasjoner(Personinfo søkerPersonInfo,
-                                                                       Behandling behandling) {
-
-        var informasjonBuilder = new PersonInformasjonBuilder(PersonopplysningVersjonType.REGISTRERT);
-
-        // Historikk for søker
-        var fagsakYtelseType = behandling.getFagsakYtelseType();
-        var opplysningsperioden = skjæringstidspunktTjeneste.utledOpplysningsperiode(behandling.getId(), fagsakYtelseType, true);
-        var personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(søkerPersonInfo.getAktørId(), opplysningsperioden);
-        mapAdresser(personhistorikkinfo.getAdressehistorikk(), informasjonBuilder, søkerPersonInfo);
-        mapStatsborgerskap(personhistorikkinfo.getStatsborgerskaphistorikk(), informasjonBuilder, søkerPersonInfo);
-        mapPersonstatus(personhistorikkinfo.getPersonstatushistorikk(), informasjonBuilder, søkerPersonInfo);
-
-        mapTilPersonopplysning(søkerPersonInfo, informasjonBuilder, true, false, behandling);
-
         if (fagsakYtelseType.harRelatertePersoner()) {
-            // legg til pleietrengende
-            leggTilPleietrengende(informasjonBuilder, behandling);
-            // Ektefelle
-            leggTilEktefelle(søkerPersonInfo, informasjonBuilder, behandling);
-            // Relatert person
-            leggTilRelatertPerson(informasjonBuilder, behandling);
-
+            leggTilPleietrengende(informasjonBuilder, behandling, opplysningsperioden);
+            leggTilEktefelle(informasjonBuilder, behandling, opplysningsperioden, søkerPersonInfo);
+            leggTilRelatertPerson(informasjonBuilder, behandling, opplysningsperioden);
         }
-
 
         return informasjonBuilder;
     }
@@ -209,14 +169,18 @@ public class RegisterdataInnhenter {
     private void leggTilSøkersBarn(Personinfo søkerPersonInfo, Behandling behandling, PersonInformasjonBuilder informasjonBuilder, no.nav.k9.sak.typer.Periode opplysningsperioden) {
         List<Personinfo> barna = hentBarnRelatertTil(søkerPersonInfo, behandling);
         barna.forEach(barn -> {
-            Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(barn.getAktørId(), opplysningsperioden);
-            mapInfoMedHistorikkTilEntitet(barn, personhistorikkinfo, informasjonBuilder);
-            mapRelasjon(søkerPersonInfo, barn, Collections.singletonList(RelasjonsRolleType.BARN), informasjonBuilder);
+            if (hentHistorikkForRelatertePersoner(behandling)) {
+                Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(barn.getAktørId(), opplysningsperioden);
+                mapInfoMedHistorikkTilEntitet(barn, personhistorikkinfo, informasjonBuilder);
+            } else {
+                mapInfoTilEntitet(barn, informasjonBuilder);
+            }
             mapRelasjon(barn, søkerPersonInfo, utledRelasjonsrolleTilBarn(søkerPersonInfo, barn), informasjonBuilder);
+            mapRelasjon(søkerPersonInfo, barn, Collections.singletonList(RelasjonsRolleType.BARN), informasjonBuilder);
         });
     }
 
-    private void leggTilPleietrengendeMedHistorikk(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden) {
+    private void leggTilPleietrengende(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden) {
         var pleietrengende = Optional.ofNullable(behandling.getFagsak().getPleietrengendeAktørId());
         if (pleietrengende.isPresent()) {
             var aktørId = pleietrengende.get();
@@ -226,25 +190,12 @@ public class RegisterdataInnhenter {
                 if (harAktør(informasjonBuilder, personinfo)) {
                     return;
                 }
-                Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
-                mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder);
-            } else {
-                throw new IllegalStateException("Finner ikke personinfo i PDL for pleietrengende aktørid");
-            }
-        }
-    }
-
-    private void leggTilPleietrengende(PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
-        var pleietrengende = Optional.ofNullable(behandling.getFagsak().getPleietrengendeAktørId());
-        if (pleietrengende.isPresent()) {
-            var aktørId = pleietrengende.get();
-            var personinfo = personinfoAdapter.hentPersoninfo(aktørId);
-            if (personinfo != null) {
-                log.info("Fant personinfo for angitt pleietrengende fra fagsak");
-                if (harAktør(informasjonBuilder, personinfo)) {
-                    return;
+                if (hentHistorikkForRelatertePersoner(behandling)) {
+                    Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
+                    mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder);
+                } else {
+                    mapInfoTilEntitet(personinfo, informasjonBuilder);
                 }
-                mapTilPersonopplysning(personinfo, informasjonBuilder, false, true, behandling);
             } else {
                 throw new IllegalStateException("Finner ikke personinfo i PDL for pleietrengende aktørid");
             }
@@ -255,29 +206,19 @@ public class RegisterdataInnhenter {
         return informasjonBuilder.harAktørId(personinfo.getAktørId());
     }
 
-    private void leggTilRelatertPersonMedHistorikk(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden) {
+    private void leggTilRelatertPerson(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden) {
         var relatertPerson = Optional.ofNullable(behandling.getFagsak().getRelatertPersonAktørId());
         if (relatertPerson.isPresent()) {
             var aktørId = relatertPerson.get();
             var personinfo = personinfoAdapter.hentPersoninfo(aktørId);
             if (personinfo != null) {
                 log.info("Fant personinfo for angitt relatert person fra fagsak");
-                Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
-                mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder);
-            } else {
-                throw new IllegalStateException("Finner ikke personinfo i PDL for relatert person aktørid");
-            }
-        }
-    }
-
-    private void leggTilRelatertPerson(PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
-        var relatertPerson = Optional.ofNullable(behandling.getFagsak().getRelatertPersonAktørId());
-        if (relatertPerson.isPresent()) {
-            var aktørId = relatertPerson.get();
-            var personinfo = personinfoAdapter.hentPersoninfo(aktørId);
-            if (personinfo != null) {
-                log.info("Fant personinfo for angitt relatert person fra fagsak");
-                mapTilPersonopplysning(personinfo, informasjonBuilder, false, true, behandling);
+                if (hentHistorikkForRelatertePersoner(behandling)) {
+                    Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
+                    mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder);
+                } else {
+                    mapInfoTilEntitet(personinfo, informasjonBuilder);
+                }
             } else {
                 throw new IllegalStateException("Finner ikke personinfo i PDL for relatert person aktørid");
             }
@@ -305,8 +246,7 @@ public class RegisterdataInnhenter {
 
             final DatoIntervallEntitet periode = DatoIntervallEntitet.fraOgMedTilOgMed(brukFødselsdatoHvisEtter(
                 statsborgerskap.getGyldighetsperiode().getFom(), personinfo.getFødselsdato()), statsborgerskap.getGyldighetsperiode().getTom());
-            final PersonInformasjonBuilder.StatsborgerskapBuilder builder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(), periode,
-                landkode, region);
+            final PersonInformasjonBuilder.StatsborgerskapBuilder builder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(), periode, landkode, region);
             builder.medPeriode(periode)
                 .medStatsborgerskap(landkode);
             builder.medRegion(region);
@@ -340,20 +280,6 @@ public class RegisterdataInnhenter {
         return dato;
     }
 
-    private void mapTilPersonopplysning(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder, boolean skalHenteBarnRelasjoner,
-                                        boolean erIkkeSøker, Behandling behandling) {
-        mapInfoTilEntitet(personinfo, informasjonBuilder, erIkkeSøker);
-
-        if (skalHenteBarnRelasjoner) {
-            List<Personinfo> barna = hentBarnRelatertTil(personinfo, behandling);
-            barna.forEach(barn -> {
-                mapInfoTilEntitet(barn, informasjonBuilder, true);
-                mapRelasjon(personinfo, barn, Collections.singletonList(RelasjonsRolleType.BARN), informasjonBuilder);
-                mapRelasjon(barn, personinfo, utledRelasjonsrolleTilBarn(personinfo, barn), informasjonBuilder);
-            });
-        }
-    }
-
     private List<RelasjonsRolleType> utledRelasjonsrolleTilBarn(Personinfo personinfo, Personinfo barn) {
         if (barn == null) {
             return Collections.emptyList();
@@ -361,7 +287,7 @@ public class RegisterdataInnhenter {
         return barn.getFamilierelasjoner().stream()
             .filter(fr -> fr.getPersonIdent().equals(personinfo.getPersonIdent()))
             .map(rel -> utledRelasjonsrolleTilBarn(personinfo.getKjønn(), rel.getRelasjonsrolle()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private void mapRelasjon(Personinfo fra, Personinfo til, List<RelasjonsRolleType> roller, PersonInformasjonBuilder informasjonBuilder) {
@@ -388,63 +314,33 @@ public class RegisterdataInnhenter {
             return;
         }
 
-        final DatoIntervallEntitet periode = getPeriode(personinfo.getFødselsdato(), Tid.TIDENES_ENDE);
-        final PersonInformasjonBuilder.PersonopplysningBuilder builder = informasjonBuilder.getPersonopplysningBuilder(personinfo.getAktørId());
-        builder.medFødselsdato(personinfo.getFødselsdato())
-            .medNavn(personinfo.getNavn())
-            .medDødsdato(personinfo.getDødsdato())
-            .medKjønn(personinfo.getKjønn())
-            .medSivilstand(personinfo.getSivilstandType())
-            .medRegion(personinfo.getRegion());
-        informasjonBuilder.leggTil(builder);
-
-        if (lagreDeltBostedForRammevedtakOMP) {
-            for (DeltBosted deltBosted : personinfo.getDeltBostedList()) {
-                Adresseinfo adresse = deltBosted.getAdresseinfo();
-                final PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(),
-                    periode, AdresseType.DELT_BOSTEDSADRESSE);
-                informasjonBuilder.leggTil(adresseBuilder
-                    .medAdresselinje1(adresse.getAdresselinje1())
-                    .medAdresselinje2(adresse.getAdresselinje2())
-                    .medAdresselinje3(adresse.getAdresselinje3())
-                    .medPostnummer(adresse.getPostNr())
-                    .medLand(adresse.getLand())
-                    .medAdresseType(AdresseType.DELT_BOSTEDSADRESSE)
-                    .medPeriode(DatoIntervallEntitet.fraOgMedTilOgMed(deltBosted.getPeriode().getFom(), deltBosted.getPeriode().getTom())));
-            }
-        }
-
+        mapPersonopplysning(informasjonBuilder, personinfo);
+        mapDeltBosted(personinfo, informasjonBuilder);
         mapAdresser(personhistorikkinfo.getAdressehistorikk(), informasjonBuilder, personinfo);
         mapStatsborgerskap(personhistorikkinfo.getStatsborgerskaphistorikk(), informasjonBuilder, personinfo);
         mapPersonstatus(personhistorikkinfo.getPersonstatushistorikk(), informasjonBuilder, personinfo);
 
     }
 
-    private void mapInfoTilEntitet(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder, boolean lagreIHistoriskeTabeller) {
+    private void mapInfoTilEntitet(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder) {
         if (harAktør(informasjonBuilder, personinfo)) {
             return;
         }
 
-        final DatoIntervallEntitet periode = getPeriode(personinfo.getFødselsdato(), Tid.TIDENES_ENDE);
-        final PersonInformasjonBuilder.PersonopplysningBuilder builder = informasjonBuilder.getPersonopplysningBuilder(personinfo.getAktørId());
-        builder.medFødselsdato(personinfo.getFødselsdato())
-            .medNavn(personinfo.getNavn())
-            .medDødsdato(personinfo.getDødsdato())
-            .medKjønn(personinfo.getKjønn())
-            .medSivilstand(personinfo.getSivilstandType())
-            .medRegion(personinfo.getRegion());
-        informasjonBuilder.leggTil(builder);
+        mapPersonopplysning(informasjonBuilder, personinfo);
+        mapDeltBosted(personinfo, informasjonBuilder);
 
-        if (lagreIHistoriskeTabeller || informasjonBuilder.harIkkeFåttStatsborgerskapHistorikk(personinfo.getAktørId())) {
-            final PersonInformasjonBuilder.StatsborgerskapBuilder statsborgerskapBuilder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(),
-                periode, personinfo.getLandkode(), personinfo.getRegion());
+        //map opplysninger som kan være periodisert, men som ikke er hentet inn periodisert for denne saken
+        //setter da periode som angitt under
+        DatoIntervallEntitet periode = getPeriode(personinfo.getFødselsdato(), Tid.TIDENES_ENDE);
+        if (informasjonBuilder.harIkkeFåttStatsborgerskapHistorikk(personinfo.getAktørId())) {
+            PersonInformasjonBuilder.StatsborgerskapBuilder statsborgerskapBuilder = informasjonBuilder.getStatsborgerskapBuilder(personinfo.getAktørId(), periode, personinfo.getLandkode(), personinfo.getRegion());
             informasjonBuilder.leggTil(statsborgerskapBuilder);
         }
 
-        if (lagreIHistoriskeTabeller || informasjonBuilder.harIkkeFåttAdresseHistorikk(personinfo.getAktørId())) {
+        if (informasjonBuilder.harIkkeFåttAdresseHistorikk(personinfo.getAktørId())) {
             for (Adresseinfo adresse : personinfo.getAdresseInfoList()) {
-                final PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(),
-                    periode, adresse.getGjeldendePostadresseType());
+                PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(), periode, adresse.getGjeldendePostadresseType());
                 informasjonBuilder.leggTil(adresseBuilder
                     .medAdresselinje1(adresse.getAdresselinje1())
                     .medAdresselinje2(adresse.getAdresselinje2())
@@ -454,28 +350,42 @@ public class RegisterdataInnhenter {
                     .medAdresseType(adresse.getGjeldendePostadresseType())
                     .medPeriode(periode));
             }
-
-            if (lagreDeltBostedForRammevedtakOMP) {
-                for (DeltBosted deltBosted : personinfo.getDeltBostedList()) {
-                    Adresseinfo adresse = deltBosted.getAdresseinfo();
-                    final PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(),
-                        periode, AdresseType.DELT_BOSTEDSADRESSE);
-                    informasjonBuilder.leggTil(adresseBuilder
-                        .medAdresselinje1(adresse.getAdresselinje1())
-                        .medAdresselinje2(adresse.getAdresselinje2())
-                        .medAdresselinje3(adresse.getAdresselinje3())
-                        .medPostnummer(adresse.getPostNr())
-                        .medLand(adresse.getLand())
-                        .medAdresseType(AdresseType.DELT_BOSTEDSADRESSE)
-                        .medPeriode(DatoIntervallEntitet.fraOgMedTilOgMed(deltBosted.getPeriode().getFom(), deltBosted.getPeriode().getTom())));
-                }
-            }
         }
 
-        if (lagreIHistoriskeTabeller || informasjonBuilder.harIkkeFåttPersonstatusHistorikk(personinfo.getAktørId())) {
-            final PersonInformasjonBuilder.PersonstatusBuilder personstatusBuilder = informasjonBuilder.getPersonstatusBuilder(personinfo.getAktørId(),
-                periode).medPersonstatus(personinfo.getPersonstatus());
+        if (informasjonBuilder.harIkkeFåttPersonstatusHistorikk(personinfo.getAktørId())) {
+            PersonInformasjonBuilder.PersonstatusBuilder personstatusBuilder = informasjonBuilder.getPersonstatusBuilder(personinfo.getAktørId(), periode)
+                .medPersonstatus(personinfo.getPersonstatus());
             informasjonBuilder.leggTil(personstatusBuilder);
+        }
+    }
+
+    private void mapPersonopplysning(PersonInformasjonBuilder informasjonBuilder, Personinfo personinfo) {
+        final PersonInformasjonBuilder.PersonopplysningBuilder builder = informasjonBuilder.getPersonopplysningBuilder(personinfo.getAktørId());
+        builder.medFødselsdato(personinfo.getFødselsdato())
+            .medNavn(personinfo.getNavn())
+            .medDødsdato(personinfo.getDødsdato())
+            .medKjønn(personinfo.getKjønn())
+            .medSivilstand(personinfo.getSivilstandType())
+            .medRegion(personinfo.getRegion());
+        informasjonBuilder.leggTil(builder);
+    }
+
+    private void mapDeltBosted(Personinfo personinfo, PersonInformasjonBuilder informasjonBuilder) {
+        if (lagreDeltBostedForRammevedtakOMP) {
+            for (DeltBosted deltBosted : personinfo.getDeltBostedList()) {
+                Adresseinfo adresse = deltBosted.getAdresseinfo();
+
+                DatoIntervallEntitet periode = DatoIntervallEntitet.fra(deltBosted.getPeriode());
+                final PersonInformasjonBuilder.AdresseBuilder adresseBuilder = informasjonBuilder.getAdresseBuilder(personinfo.getAktørId(), periode, AdresseType.DELT_BOSTEDSADRESSE);
+                informasjonBuilder.leggTil(adresseBuilder
+                    .medAdresselinje1(adresse.getAdresselinje1())
+                    .medAdresselinje2(adresse.getAdresselinje2())
+                    .medAdresselinje3(adresse.getAdresselinje3())
+                    .medPostnummer(adresse.getPostNr())
+                    .medLand(adresse.getLand())
+                    .medAdresseType(AdresseType.DELT_BOSTEDSADRESSE)
+                    .medPeriode(periode));
+            }
         }
     }
 
@@ -483,7 +393,7 @@ public class RegisterdataInnhenter {
         return DatoIntervallEntitet.fraOgMedTilOgMed(fom, tom != null ? tom : Tid.TIDENES_ENDE);
     }
 
-    private void leggTilEktefelleMedHistorikk(Personinfo søkerPersonInfo, PersonInformasjonBuilder informasjonBuilder, no.nav.k9.sak.typer.Periode opplysningsperioden) {
+    private void leggTilEktefelle(PersonInformasjonBuilder informasjonBuilder, Behandling behandling, no.nav.k9.sak.typer.Periode opplysningsperioden, Personinfo søkerPersonInfo) {
         // Ektefelle
         final List<Familierelasjon> familierelasjoner = søkerPersonInfo.getFamilierelasjoner()
             .stream()
@@ -496,31 +406,13 @@ public class RegisterdataInnhenter {
             Optional<Personinfo> ektefelleInfo = personinfoAdapter.innhentSaksopplysninger(ident);
             if (ektefelleInfo.isPresent()) {
                 final Personinfo personinfo = ektefelleInfo.get();
-                Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
-                mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder);
+                if (hentHistorikkForRelatertePersoner(behandling)) {
+                    Personhistorikkinfo personhistorikkinfo = personinfoAdapter.innhentPersonopplysningerHistorikk(personinfo.getAktørId(), opplysningsperioden);
+                    mapInfoMedHistorikkTilEntitet(personinfo, personhistorikkinfo, informasjonBuilder);
+                } else {
+                    mapInfoTilEntitet(personinfo, informasjonBuilder);
+                }
 
-                mapRelasjon(søkerPersonInfo, personinfo, Collections.singletonList(familierelasjon.getRelasjonsrolle()), informasjonBuilder);
-                mapRelasjon(personinfo, søkerPersonInfo, Collections.singletonList(familierelasjon.getRelasjonsrolle()), informasjonBuilder);
-            } else {
-                log.warn("Fant ikke personinfo for familierelasjon: {}", familierelasjon.getRelasjonsrolle());
-            }
-        }
-    }
-
-    private void leggTilEktefelle(Personinfo søkerPersonInfo, PersonInformasjonBuilder informasjonBuilder, Behandling behandling) {
-        // Ektefelle
-        final List<Familierelasjon> familierelasjoner = søkerPersonInfo.getFamilierelasjoner()
-            .stream()
-            .filter(f -> f.getRelasjonsrolle().equals(RelasjonsRolleType.EKTE) ||
-                f.getRelasjonsrolle().equals(RelasjonsRolleType.REGISTRERT_PARTNER) ||
-                f.getRelasjonsrolle().equals(RelasjonsRolleType.SAMBOER))
-            .collect(Collectors.toList());
-        for (Familierelasjon familierelasjon : familierelasjoner) {
-            var ident = familierelasjon.getPersonIdent();
-            Optional<Personinfo> ektefelleInfo = personinfoAdapter.innhentSaksopplysninger(ident);
-            if (ektefelleInfo.isPresent()) {
-                final Personinfo personinfo = ektefelleInfo.get();
-                mapTilPersonopplysning(personinfo, informasjonBuilder, false, true, behandling);
                 mapRelasjon(søkerPersonInfo, personinfo, Collections.singletonList(familierelasjon.getRelasjonsrolle()), informasjonBuilder);
                 mapRelasjon(personinfo, søkerPersonInfo, Collections.singletonList(familierelasjon.getRelasjonsrolle()), informasjonBuilder);
             } else {
@@ -531,11 +423,11 @@ public class RegisterdataInnhenter {
 
     private List<Personinfo> hentBarnRelatertTil(Personinfo personinfo, Behandling behandling) {
         List<Personinfo> relaterteBarn = hentAlleRelaterteBarn(personinfo);
-        var relasjonsFilter = barnRelasjonsFilter.getOrDefault(behandling.getFagsakYtelseType(), new IngenRelasjonFilter());
+        var filter = relasjonsFilter.getOrDefault(behandling.getFagsakYtelseType(), new IngenRelasjonFilter());
 
         return relaterteBarn.stream()
-            .filter(it -> relasjonsFilter.relasjonsFiltrering(behandling, it))
-            .collect(Collectors.toList());
+            .filter(barn -> filter.relasjonsFiltreringBarn(behandling, barn))
+            .toList();
     }
 
     private List<Personinfo> hentAlleRelaterteBarn(Personinfo søkerPersonInfo) {
@@ -544,7 +436,7 @@ public class RegisterdataInnhenter {
             .filter(r -> r.getRelasjonsrolle().equals(RelasjonsRolleType.BARN))
             .map(r -> personinfoAdapter.innhentSaksopplysningerForBarn(r.getPersonIdent()).orElse(null))
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private RelasjonsRolleType utledRelasjonsrolleTilBarn(NavBrukerKjønn kjønn, RelasjonsRolleType rolle) {
@@ -618,5 +510,9 @@ public class RegisterdataInnhenter {
 
     private Set<RegisterdataType> utledBasertPå(BehandlingType behandlingType, FagsakYtelseType ytelseType) {
         return InformasjonselementerUtleder.finnTjeneste(informasjonselementer, ytelseType, behandlingType).utled(behandlingType);
+    }
+
+    private boolean hentHistorikkForRelatertePersoner(Behandling behandling) {
+        return relasjonsFilter.get(behandling.getFagsakYtelseType()).hentHistorikkForRelatertePersoner();
     }
 }
